--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
+* {
+	box-sizing: border-box;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	padding: 0;
+}
+nav {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	padding: 1.5rem;
+	justify-content: center;
+}
+nav button {
+	margin-left: 0.5rem;
+	padding: 0.5rem;
+	background-color: rgb(112, 206, 238);
+	border: none;
+	cursor: pointer;
+	border-radius: 0.2rem;
+}
 .App {
-  text-align: center;
+	display: flex;
+	flex-direction: row;
+}
+#textarea {
+	flex: 1;
+	border: 1px solid black;
+	padding: 5px;
+	height: 30rem;
+	display: flex;
+	flex-direction: column;
+}
+#textarea h3 {
+	margin: 0 auto;
+}
+#textarea #area {
+	flex: 1;
+	width: 100%;
+	margin-bottom: 2px;
+	font-size: 1rem;
+	border: none;
+	resize: none;
+	overflow: hidden;
+}
+#textarea #area:focus {
+	outline: none;
+}
+#viewer {
+	flex: 1;
+	max-width: 50%;
+	padding: 5px;
+	border: 1px solid black;
+	border-left: none;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+}
+#viewer h3 {
+	margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+blockquote {
+	border-left: 4px solid rgb(121, 179, 245);
+	padding-left: 4px;
 }
