--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,46 @@ nav button {
 	margin: 0 auto;
 }
 
+.modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
+	display: none;
+}
+.modal button {
+	background-color: rgb(235, 42, 42);
+	color: #fff;
+	padding: 0.4rem 0.5rem;
+}
+.visible {
+	display: flex;
+}
+.modal-inner {
+	position: fixed;
+	background: white;
+	width: 50%;
+	height: auto;
+	top: 50%;
+	left: 50%;
+	border-radius: 5px;
+	transform: translate(-50%, -50%);
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding: 5px;
+	overflow: hidden;
+}
+@media only screen and (min-width: 600px) {
+	.modal-inner {
+		width: 30%;
+	}
+}
+.model-info {
+	margin-top: 0;
+}
 blockquote {
 	border-left: 4px solid rgb(121, 179, 245);
 	padding-left: 4px;
